feat: Support shared scripts (#2161)